# 0.0.3 - 2017-Sep-01

Issue #1

# 0.0.2 - 2017-Mar-22

Tweaked documentation a bit
