@@ -1,2 +1,4 @@
 lib/.precomp
 .precomp/
+.cache
+
