@@ -1,0 +1,4 @@
+#!perl6
+
+EVALFILE ".tom/commit.pl6";
+EVALFILE ".tom/push.pl6";
