@@ -1,0 +1,4 @@
+#!perl6
+
+bash "git diff";
+bash "git status";
