@@ -1,0 +1,1 @@
+bash "zef install . --force-install";
