@@ -1,0 +1,1 @@
+task-run "nanorc", "nano-setup";
