@@ -1,0 +1,4 @@
+#!perl6
+
+task-run "git pull", "git-pull";
+
