@@ -1,0 +1,3 @@
+#!perl6
+
+task-run "git push", "git-push", %( confirm => "no" );
