@@ -1,0 +1,4 @@
+#!perl6
+
+zef "App::Mi6", %( notest => True );
+bash "mi6 release";
