@@ -1,0 +1,2 @@
+task-run "check json files", "json-lint", %( path =>  "{$*CWD}" );
+bash "zef test .";
