@@ -1,0 +1,4 @@
+#!perl6
+
+task-run "lint modified files", "yaml-lint";
+
