@@ -1,6 +1,6 @@
 use v6;
 use Test;
-use Sparrowdo::Chef::Client;
+use Sparrow6::Chef::Client;
 plan 1;
 
 ok 1, 'Module loaded';
